# bpmn-docs-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/skills/process-yaml/: SKILL.md
docs/: yaml-schema.md
docs/examples/: it-sales-process.yaml  process.yaml
docs/plans/20250207-drawio-xml-to-pptx/: plan.md  worklog.md
docs/plans/20250207-process-to-pptx/: plan.md  worklog.md
docs/plans/20250211-process-pptx-remaining/: plan.md  worklog.md
docs/plans/20250217-margins-and-system-swimlane/: plan.md  worklog.md
docs/plans/20250218-task-size-and-columns/: plan.md  worklog.md
docs/templates/: plan-template.md
drawio_to_pptx/: __init__.py  __main__.py  cli.py  drawio2pptx.py  xml2drawio.py
input/: bank-sales.yaml  it-sales.yaml  process.yaml
process_to_pptx/: __init__.py  __main__.py  cli.py  xml2drawio.py  xml2pptx.py  yaml2pptx.py  yaml_loader.py
scripts/: docker-entrypoint.sh
src/: .gitkeep
tests/: test_cli.py  test_drawio2pptx.py  test_xml2drawio.py  test_xml2pptx.py  test_yaml2pptx.py  test_yaml_loader.py
